--- a/views/index.erb
+++ b/views/index.erb
@@ -1,41 +1,55 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<div class="container">
+  <div class="row">
 
-    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
-
-    <title>Reconstruction Database</title>
-
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
-
-  </head>
-  <body>
-    <div class="container">
-      <h1>Reconstruction Database</h1>
-
-      <div class="btn-group filters">
-
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-          <%= @solver %> <span class="caret"></span>
-        </button>
-
-        <ul class="dropdown-menu">
-            <li><a href="/">Everyone</a></li>
-          <% @solvers.each do |solver| %>
-            <li><a href="?solver=<%= solver %>"><%= solver %></a></li>
+    <form action="/" method="GET" class="form-inline">
+      <% @fields.each do |field| %>
+      <label>
+        <%= field[:name].capitalize %>
+        <select name="<%= field[:name] %>" class="form-control">
+          <option value="">All</option>
+          <% field[:all_values].each do |value| %>
+            <option value="<%= value %>"
+            <%= field[:default_value] == value ? ' selected="selected"' : "" %>
+            ><%= value %></option>
           <% end %>
-        </ul>
+        </select> 
+      </label>
 
-      </div>
-      <br><br>
-
-      <% @solves.each do |solve| %>
-        <a href="<%= solve.id %>">
-          <%= solve.solver %> : <%= solve.time %> <br>
-        </a>
       <% end %>
-    </div>
-  </body>
-</html>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+
+    </form>
+
+    <br><br>
+  </div>
+  <div class="row">
+
+    <table class="table table-bordered table-striped table-hover span8">
+      <tr>
+        <th> Solver </th>
+        <th> Event </th>
+        <th> Time </th>
+        <th> Competition </th>
+      </tr>
+      <% @solves.each do |solve| %>
+        <tr>
+          <td>
+            <%= solve.solver %> <br>
+          </td>
+          <td>
+            <%= solve.puzzle %>
+          </td>
+          <td>
+            <a href="/solve/<%= solve.id %>">
+              <%= solve.time %>
+            </a>
+          </td>
+          <td>
+            <%= solve.competition %>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
