--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <title>ReconstructionDatabase</title>
 
