--- a/views/solve.erb
+++ b/views/solve.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="youtube">
-    <% unless @solve[:youtube].empty? %>
+    <% unless @solve[:youtube].nil? || @solve[:youtube].empty? %>
       <a href="http://www.youtube.com/watch?v=<%= @solve[:youtube] %>" >
         View on youtube
       </a>
