added link to main page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
 
-    <title>ReconstructionDatabase</title>
+    <title>Reconstruction Database</title>
 
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/dist/js/bootstrap.min.js"></script>
@@ -14,7 +14,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>Reconstruction Database</h1>
+      <a href="/">
+        <h1>Reconstruction Database</h1>
+      </a>
     </div>
     <%= yield %>
   </body>
