--- a/views/index.erb
+++ b/views/index.erb
@@ -33,10 +33,10 @@
       </tr>
       <% @solves.each do |solve| %>
         <tr>
-          <td> <%= solve[:solver] %> <br> </td>
-          <td> <%= solve[:puzzle] %> </td>
-          <td> <a href="/<%= solve[:id] %>"> <%= solve[:time] %> </a> </td>
-          <td> <%= solve[:competition] %> </td>
+          <td> <%= solve.solver %> <br> </td>
+          <td> <%= solve.puzzle %> </td>
+          <td> <a href="/<%= solve.id %>"> <%= solve.time %> </a> </td>
+          <td> <%= solve.competition %> </td>
         </tr>
       <% end %>
     </table>
