--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
 
     <title>Reconstruction Database</title>
 
