fixed filtering with times

--- a/views/input.erb
+++ b/views/input.erb
@@ -14,6 +14,6 @@
     </select> 
 </label>
 <label>
-  <input cols="10" name="time" class="form-control small" type="text"
+  <input cols="10" name="time-value" class="form-control small" type="text"
   value="<%= default_time %>"></input>
 </label>
