sort fields for dropdown

--- a/views/dropdown.erb
+++ b/views/dropdown.erb
@@ -2,7 +2,7 @@
   <%= title.capitalize %>
   <select name="<%= title %>" class="form-control">
     <option value="">All</option>
-    <% potential_values.each do |value| %>
+    <% potential_values.sort.each do |value| %>
       <option value="<%= value %>"
       <%= default_value == value ? ' selected="selected"' : "" %> ><%= value %></option>
     <% end %>
