--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
         <tr>
           <td> <%= solve.solver %> <br> </td>
           <td> <%= solve.puzzle %> </td>
-          <td> <a href="/<%= solve.id %>"> <%= solve.time %> </a> </td>
+          <td> <a href="/solve/<%= solve.id %>"> <%= solve.time %> </a> </td>
           <td> <%= solve.competition %> </td>
         </tr>
       <% end %>
