--- a/views/solve.erb
+++ b/views/solve.erb
@@ -1,22 +1,20 @@
-<div class="container">
-  <% location = @solve.competition.nil? ? "" : "at #{@solve.competition}" %>
-  <h1><%= format_time(@solve.time) %> <%= @solve.puzzle %> solve by <%= @solve.solver %> <%= location %></h1>
+<% location = @solve.competition.nil? ? "" : "at #{@solve.competition}" %>
+<h2><%= format_time(@solve.time) %> <%= @solve.puzzle %> solve by <%= @solve.solver %> <%= location %></h2>
 
-  <h2>Scramble</h2>
-  <div class="algorithm">
-    <%= @solve.scramble %> <br><br>
-  </div>
+<h3>Scramble</h3>
+<div class="algorithm well">
+  <%= @solve.scramble %> <br><br>
+</div>
 
-  <h2>Solution</h2>
-  <div class="algorithm">
-    <%= format_solution(@solve.solution) %> <br>
-  </div>
+<h3>Solution</h3>
+<div class="algorithm well">
+  <%= format_solution(@solve.solution) %> <br>
+</div>
 
-  <div class="youtube">
-    <% unless @solve.youtube.nil? || @solve.youtube.empty? %>
-      <a href="http://www.youtube.com/watch?v=<%= @solve.youtube %>" >
-        View on youtube
-      </a>
-    <% end %>
-  </div>
+<div class="youtube">
+  <% unless @solve.youtube.nil? || @solve.youtube.empty? %>
+    <a href="http://www.youtube.com/watch?v=<%= @solve.youtube %>" >
+      View on youtube
+    </a>
+  <% end %>
 </div>
