fix some formatting stuff

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,7 @@
 </div>
 <div class="row">
 
-  <table class="table table-bordered table-striped table-hover span8">
+  <table class="table table-condensed table-bordered table-striped table-hover span8">
     <tr>
       <th> Solver </th>
       <th> Event </th>
