--- a/views/solve.erb
+++ b/views/solve.erb
@@ -9,7 +9,7 @@
 <div class="youtube">
   <% unless @solve.youtube.nil? || @solve.youtube.empty? %>
     <a href="http://www.youtube.com/watch?v=<%= @solve.youtube %>" >
-      View on youtube
+      View on YouTube
     </a>
   <% end %>
 </div>
