Open youtube links in new tab, close #7

--- a/views/solve.erb
+++ b/views/solve.erb
@@ -8,7 +8,7 @@
 
 <div class="youtube">
   <% unless @solve.youtube.nil? || @solve.youtube.empty? %>
-    <a href="http://www.youtube.com/watch?v=<%= @solve.youtube %>" >
+    <a href="http://www.youtube.com/watch?v=<%= @solve.youtube %>" target="_blank" >
       View on YouTube
     </a>
   <% end %>
