--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
       <tr>
         <td> <%= solve.solver %> <br> </td>
         <td> <%= solve.puzzle %> </td>
-        <td> <a href="/solve/<%= solve.id %>"> <%= format_time(solve.time) %> </a> </td>
+        <td> <a href="/solve/<%= solve.id %>"> <%= solve.display_alone %> </a> </td>
         <td> <%= solve.competition %> </td>
         <td> <%= date_added(solve) %> </td>
       </tr>
