add some movecount stuff

--- a/views/solve.erb
+++ b/views/solve.erb
@@ -43,6 +43,10 @@
   <% end %>
 </div>
 
+<div class="stats">
+  Movecount: <%= @solve.movecount %>
+</div>
+
 <div class="footnotes">
   <div>
     Added: <%= date_added(@solve) %>
