--- a/views/input.erb
+++ b/views/input.erb
@@ -1,12 +1,12 @@
 <label>
-  <%= title.capitalize %> <br>
+  <%= field_name.capitalize %> <br>
     <select name="time-specifier" class="form-control" >
       <option value="">All</option>
       <% [["equal", "Equal to"],
           ["less", "Less than"],
           ["greater", "Greater than"]].each do |key, name| %>
             <option 
-            <% if default_specifier == key %>
+            <% if params["time-specifier"] == key %>
               selected="selected"
             <% end %>
             value="<%= key %>"><%= name %></option>
@@ -15,5 +15,5 @@
 </label>
 <label>
   <input cols="10" name="time-value" class="form-control small" type="text"
-  value="<%= default_time %>"></input>
+  value="<%= params["time-value"] %>"></input>
 </label>
