--- a/views/solve.erb
+++ b/views/solve.erb
@@ -2,7 +2,7 @@
   <%= @solve.format %>
   <%= @solve.puzzle %>
   solve by
-  <%= @solve.solver.name %>
+  <%= @solve.solver %>
   <%= at @solve.competition %>
 </h2>
 
