fix competition formatting

--- a/views/solve.erb
+++ b/views/solve.erb
@@ -3,7 +3,7 @@
   <%= @solve.puzzle %>
   solve by
   <%= @solve.solver %>
-  <%= at @solve.competition %>
+  <%= @solve.competition.at %>
 </h2>
 
 <div class="youtube">
