Add record field for single and average. close #6

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,6 +19,8 @@
     <tr>
       <th> Solver </th>
       <th> Event </th>
+      <th> Single </th>
+      <th> Average </th>
       <th> Time </th>
       <th> Competition </th>
       <th> Date Added </th>
@@ -27,6 +29,8 @@
       <tr>
         <td> <%= solve.solver.name %> <br> </td>
         <td> <%= solve.puzzle.name %> </td>
+        <td> <%= solve.record %> </td>
+        <td> <%= solve.average.record %> </td>
         <td> <a href="/solve/<%= solve.id %>"> <%= solve.format %> </a> </td>
         <td> <%= solve.competition.name %> </td>
         <td> <%= date_added(solve) %> </td>
