--- a/views/solve.erb
+++ b/views/solve.erb
@@ -3,7 +3,7 @@
   <%= @solve.record %>
   <%= @solve.puzzle %>
   solve by
-  <%= @solve.solver %>
+  <%= @solve.solver.name_link %>
   <%= @solve.competition.at %>
 </h2>
 
