--- a/views/solve.erb
+++ b/views/solve.erb
@@ -12,13 +12,20 @@
     <a href="<%= garronize(@solve) %>">View on alg.garron</a>
   </div>
 <% end %>
-<div class="youtube">
-  <% unless @solve.youtube.nil? || @solve.youtube.empty? %>
+<% unless @solve.scramble.blank? %>
+  <div class="ksim-link">
+    <a href="http://snk.digibase.ca/ksim.htm?alg=<%= @solve.scramble.gsub(/\s/,"") %>" target="_blank" >
+      Try scramble on kSim
+    </a>
+  </div>
+<% end %>
+<% unless @solve.youtube.nil? || @solve.youtube.empty? %>
+  <div class="youtube">
     <a href="http://www.youtube.com/watch?v=<%= @solve.youtube %>" target="_blank" >
       View on YouTube
     </a>
-  <% end %>
-</div>
+  </div>
+<% end %>
 
 <div class="row">
   <div class="col-lg-8">
