--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,6 +21,20 @@
       <div class="row">
         <%= yield %>
       </div>
+
+      <div class="row footer text-muted">
+        <hr>
+        &copy; Justin Jaffray |
+        <a href="http://www.github.com/justinj/reconstruction-database"
+          target="_blank">
+          Source
+        </a> | 
+        <a 
+          href="https://github.com/justinj/reconstruction-database/issues"
+          target="_blank">
+          Issues
+        </a>
+      </div>
     </div>
   </body>
 </html>
