Begin adding admin panel stuff, currently doesn't require authentication

--- a/views/solve.erb
+++ b/views/solve.erb
@@ -63,3 +63,8 @@
     Reconstructed by: <%= @solve.reconstructor %>
   </div>
 </div>
+
+<%# oh my god do not deploy this %>
+<div class="edit-button">
+  <a href="/solve/edit/<%= @solve.id %>">Edit this solve</a>
+</div>
