Move data into average from solver

--- a/views/average.erb
+++ b/views/average.erb
@@ -4,7 +4,7 @@
   </a>
 <% end %>
 = <%= format_time result %>
-<% unless record.blank? %>
-  (<%= record %>)
+<% unless average_record.blank? %>
+  (<%= average_record %>)
 <% end %>
 <br>
