--- a/views/index.erb
+++ b/views/index.erb
@@ -28,8 +28,8 @@
       <tr>
         <td> <%= solve.solver %> <br> </td>
         <td> <%= solve.puzzle.name %> </td>
-        <td> <div class="record"><%= solve.record %></div> </td>
-        <td> <div class="record"><%= solve.average.record %></div> </td>
+        <td> <div class="record"><%= solve.single_record %></div> </td>
+        <td> <div class="record"><%= solve.average.average_record %></div> </td>
         <td> <a href="/solve/<%= solve.id %>"> <%= solve.format %> </a> </td>
         <td> <%= solve.competition.name %> </td>
         <td> <%= date_added(solve) %> </td>
