--- a/views/solve.erb
+++ b/views/solve.erb
@@ -1,6 +1,6 @@
 <h2>
   <%= @solve.format %>
-  <%= @solve.record %>
+  <%= @solve.single_record %>
   <%= @solve.puzzle %>
   solve by
   <%= @solve.solver.name_link %>
