Have authentication working

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,11 @@
         <%= yield %>
       </div>
 
+      <% if current_user %>
+        Logged in as <%= current_user.name %> <br>
+        <a href="/logout">log out</a>
+      <% end %>
+
       <div class="row footer text-muted">
         <hr>
         &copy; Justin Jaffray |
