--- a/views/edit_average.erb
+++ b/views/edit_average.erb
@@ -4,6 +4,7 @@
   <%= text_input("Solver", @average.solver, "average[solver]") %>
   <%= text_input("Competition", @average.competition, "average[competition]") %>
   <%= text_input("Puzzle", @average.puzzle, "average[puzzle]") %>
+  <%= text_input("Visible? (0 = no, 1 = yes)", @average.visible, "average[visible]") %>
 
   <br>
   <input type="submit" value="Update" class="form-control">
