--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,25 +3,36 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <link rel="stylesheet" href="/dist/css/bootstrap.min.css">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="icon" type="image/png" href="/favicon.ico">
 
     <title>RCDB</title>
 
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="/dist/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
   </head>
   <body>
-    <div class="navbar">
-      <a class="navbar-brand" href="/">Reconstruction&nbsp;Database</a>
-    </div>
+    <nav class="navbar navbar-default" role="navigation">
+    <a class="navbar-brand" href="/">Reconstruction&nbsp;Database</a>
+
+    <% if current_user %>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as <%= current_user.name %> <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/average">Averages</a></li>
+          <li><a href="/solver">Solvers</a></li>
+          <li><a href="/competition">Competitions</a></li>
+          <li><a href="/puzzle">Puzzles</a></li>
+          <li><a href="/logout">Log out</a></li>
+        </ul>
+        </li>
+      </ul>
+    <% end %>
+    </nav>
     <div class="container">
-      <% if current_user %>
-        Logged in as <%= current_user.name %> <br>
-        <a href="/logout">log out</a>
-      <% end %>
       <div class="row">
         <%= yield %>
       </div>
