--- a/views/solve.erb
+++ b/views/solve.erb
@@ -4,7 +4,7 @@
   <%=h @solve.puzzle %>
   solve by
   <%= @solve.solver.name_link %>
-  <%=h @solve.competition.at %>
+  <%= @solve.competition.at %>
 </h2>
 
 <div class="row">
