--- a/views/delete_confirm.erb
+++ b/views/delete_confirm.erb
@@ -1,4 +1,4 @@
-Are you <em>sure</em> you want to delete this average? <br>
-<%= @average.values %>
+Are you <em>sure</em> you want to delete this? <br>
+<%= @entry.values %>
 <br>
-<a href="/average/delete_confirm/<%= @average.id %>">Yes, I am a destructive person</a>
+<a href="<%= @delete_url %>/<%= @entry.id %>">Yes, I am a destructive person</a>
