Allow for deleting fields

--- a/views/enumerate_field.erb
+++ b/views/enumerate_field.erb
@@ -17,6 +17,9 @@
       <td>
         <a href="/<%= @model.query_name %>/edit/<%= entry.id %>">
           Edit
+        </a> |
+        <a href="/<%= @model.query_name %>/delete/<%= entry.id %>">
+          Delete
         </a>
       </td>
     </tr>
